force-app/main/default/objects/CCXR_Order_Line_Item__c/CCXR_Order_Line_Item__c.object-meta.xml
<CustomObject>
    <label>CCXR_Order Line Item</label>
    <nameField>
        <displayFormat>OLI-{0000}</displayFormat>
        <label>CCXR_OrderLineItem</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCXR_Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>