force-app/main/default/objects/CCXR_Order_Line_Item__c/fields/CCXR_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Item_Name__c</fullName>
    <formula>CCXR_Item_ID__r.CCXR_Item_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCXR_Item Name</label>
    <type>Text</type>
</CustomField>