force-app/main/default/objects/CCXR_Order_Line_Item__c/fields/CCXR_New_Total__c.field-meta.xml
<CustomField>
    <fullName>CCXR_New_Total__c</fullName>
    <label>CCXR_New Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>