force-app/main/default/objects/CCXR_Order_Line_Item__c/fields/CCXR_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Order_ID__c</fullName>
    <label>CCXR_Order ID</label>
    <referenceTo>CCXR_Order__c</referenceTo>
    <relationshipLabel>CCXR_Order Line Items</relationshipLabel>
    <relationshipName>CCXR_Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>