force-app/main/default/objects/CCXR_Order_Line_Item__c/fields/CCXR_OrderLineItem_Status__c.field-meta.xml
<CustomField>
    <fullName>CCXR_OrderLineItem_Status__c</fullName>
    <label>CCXR_OrderLineItem_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Preparing</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Picked-up</fullName>
            </value>
            <value>
                <fullName>Served</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>