force-app/main/default/objects/CCXR_Order_Line_Item__c/fields/CCXR_Price__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Price__c</fullName>
    <formula>CCXR_Item_ID__r.CCXR_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCXR_Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>