force-app/main/default/objects/CCXR_Order_Line_Item__c/fields/CCXR_Total__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Total__c</fullName>
    <formula>CCXR_Quantity__c  *  CCXR_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCXR_Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>