force-app/main/default/objects/CCXR_Order_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCXR_Item_Name__c</columns>
    <columns>CCXR_OrderLineItem_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>